--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-header></app-header>
 <section class="container">
+<div style="min-height:100vh; display:co; flex-direction:column; 
+justify-content:space-between;">
+<app-header></app-header>
     <router-outlet></router-outlet>
-</section>
+</div>
 <app-footer></app-footer>
+</section>
