--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,68 +1,191 @@
-<h2 class="d-flex m-3 justify-content-center">Bienvenue</h2>
+<h2 class="d-flex m-3 justify-content-center text">Bienvenue</h2>
 
-<form class="d-flex justify-content-center" role="search">
-  <input
-    (keyup)="suggestion(saisie.value)"
-    class="form-control me-2"
-    type="search"
-    placeholder="Quick Search"
-    aria-label="Search"
-    id="saisie"
-    name="saisie" #saisie>
+<form class="d-flex justify-content-center barre" role="search">
+  <input (keyup)="suggestion(saisie.value)" class="form-control me-2 rounded-pill w-50" type="search"
+    placeholder="Quick Search" aria-label="Search" id="saisie" name="saisie" #saisie>
 </form>
 
 <ul class="list-group" *ngFor="let restaurant of restaurants">
-  <li class="list-group-item">
-    <h5>{{restaurant.nom}}</h5>
-    <h6>{{restaurant.adresse}}</h6>
-    <h6>{{restaurant.tel}}</h6>
-    <h6>{{restaurant.type?.nom}}</h6>
-    <h6>{{restaurant.prix?.categorie}}</h6>
-    <a  class="btn btn-light" [routerLink]="['/restaurant', restaurant.id]">Détails</a>
+  <li class="list-group-item rounded-0">
+    <span>
+      <h5>{{restaurant.nom}}</h5>
+    </span>
+    <span>
+      <i class="fa-solid fa-location-dot"></i><h6>{{restaurant.adresse}}</h6>
+    </span>
+    <span>
+      <i class="fa-solid fa-phone"></i><h6>{{restaurant.tel}}</h6>
+    </span>
+    <span>
+      <i class="fa-solid fa-bowl-food"></i><h6>{{restaurant.type?.nom}}</h6>
+    <div *ngIf="restaurant.prix?.categorie == 'e'">
+      <i class="fa-solid fa-euro-sign"></i>
+    </div>
+    <div *ngIf="restaurant.prix?.categorie == 'ee'">
+      <i class="fa-solid fa-euro-sign"></i>
+      <i class="fa-solid fa-euro-sign"></i>
+    </div>
+    <div *ngIf="restaurant.prix?.categorie == 'eee'">
+      <i class="fa-solid fa-euro-sign"></i>
+      <i class="fa-solid fa-euro-sign"></i>
+      <i class="fa-solid fa-euro-sign"></i>
+    </div>
+    </span>
+    <a class="btn btn-light text rounded-0" [routerLink]="['/restaurant', restaurant.id]">Détails</a>
   </li>
 </ul>
 
-<button class="btn btn-default" [routerLink]="['/type/', 1]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Français</p>
-</button>
+<div class="container mt-4">
+  <div class="row">
+    <button class="btn btn-default col text" [routerLink]="['/type/', 1]">
+      <img
+        src="https://images.unsplash.com/photo-1615327631885-bca9e5798b16?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y3Vpc2luZSUyMGZyYW4lQzMlQTdhaXNlfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Français</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 2]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Japonais</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 2]">
+      <img
+        src="https://images.unsplash.com/photo-1624224701172-8499296e2cdd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGN1aXNpbmUlMjBqYXBvbmFpc2V8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Japonais</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 3]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Coréen</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 3]">
+      <img
+        src="https://images.unsplash.com/photo-1583224944844-5b268c057b72?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8a2ltY2hpfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Coréen</p>
+    </button>
+  </div>
 
-<button class="btn btn-default" [routerLink]="['/type/', 4]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Chinois</p>
-</button>
+  <div class="row">
+    <button class="btn btn-default col text" [routerLink]="['/type/', 4]">
+      <img
+        src="https://images.unsplash.com/photo-1544601284-7fe39c93d4d4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y3Vpc2luZSUyMGNoaW5vaXNlfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Chinois</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 5]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Italien</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 5]">
+      <img
+        src="https://images.unsplash.com/photo-1621538997517-58ce53933faa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGl6emElMjByZXN0YXVyYW50fGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Italien</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 6]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Indien</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 6]">
+      <img
+        src="https://images.unsplash.com/photo-1588166524941-3bf61a9c41db?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cG91bGV0JTIwY3Vycnl8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Indien</p>
+    </button>
+  </div>
 
-<button class="btn btn-default" [routerLink]="['/type/', 7]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Libanais</p>
-</button>
+  <div class="row">
+    <button class="btn btn-default col text" [routerLink]="['/type/', 7]">
+      <img
+        src="https://images.unsplash.com/photo-1591120583691-49d2741e55da?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y3Vpc2luZSUyMGxpYmFuYWlzZXxlbnwwfDF8MHx8&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Libanais</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 8]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Iranien</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 8]">
+      <img
+        src="https://images.unsplash.com/photo-1626238328324-d55282264212?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aXJhbmlhbiUyMGZvb2R8ZW58MHwxfDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Iranien</p>
+    </button>
 
-<button class="btn btn-default" [routerLink]="['/type/', 9]">
-  <i class="fa-solid fa-utensils fa-2xl"></i>
-  <p>Grec</p>
-</button>
+    <button class="btn btn-default col text" [routerLink]="['/type/', 9]">
+      <img
+        src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JlZWslMjBmb29kfGVufDB8MXwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+        style="width:200px;height:240px;">
+      <p>Grec</p>
+    </button>
+  </div>
+</div>
+
+
+
+<div class="container mt-4">
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 1]">
+      <p>1e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 2]">
+      <p>2e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 3]">
+      <p>3e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 4]">
+      <p>4e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 5]">
+      <p>5e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 6]">
+      <p>6e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 7]">
+      <p>7e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 8]">
+      <p>8e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 9]">
+      <p>9e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 10]">
+      <p>10e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 11]">
+      <p>11e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 12]">
+      <p>12e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 13]">
+      <p>13e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 14]">
+      <p>14e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 15]">
+      <p>15e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 16]">
+      <p>16e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 17]">
+      <p>17e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 18]">
+      <p>18e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 19]">
+      <p>19e</p>
+    </button>
+
+    <button class="btn btn-default col text" [routerLink]="['/arrondissement/', 20]">
+      <p>20e</p>
+    </button>
+  </div>
