--- a/src/app/pages/restaurant/restaurant.component.html
+++ b/src/app/pages/restaurant/restaurant.component.html
@@ -1,30 +1,35 @@
 <section class="d-flex">
-    <article>
-      <div></div>
-    </article>
+  <article>
+    <div></div>
+  </article>
 </section>
-  
-  <div class="row justify-content-between custom-line m-5">
-  <div class="card col-5" style="width: 20rem;">
-    <img class="card-img-top" src="" alt="Card image cap">
-    <div class="card-body">
-      <h3>{{restaurant.nom}}</h3>
-      <p class="card-text">{{restaurant.adresse}}</p>
-      <p class="card-text">{{restaurant.tel}}</p>
-      <p class="card-text">{{restaurant.type?.nom}}</p>
-      <div *ngIf="restaurant.prix?.categorie == 'e'">
-        <i class="fa-solid fa-euro-sign"></i>
-      </div>
-      <div *ngIf="restaurant.prix?.categorie == 'ee'">
-        <i class="fa-solid fa-euro-sign"></i>
-        <i class="fa-solid fa-euro-sign"></i>
-      </div>
-      <div *ngIf="restaurant.prix?.categorie == 'eee'">
-        <i class="fa-solid fa-euro-sign"></i>
-        <i class="fa-solid fa-euro-sign"></i>
-        <i class="fa-solid fa-euro-sign"></i>
-      </div>
-    </div>
-  </div>
 
-  // + Map Google Maps
+<div class="container mt-4">
+  <div class="row">
+    <div class="col justify-content-between custom-line m-5">
+      <div class="card col-5" style="width: 20rem;">
+        <div class="card-body">
+          <h3>{{restaurant.nom}}</h3>
+          <p class="card-text">{{restaurant.adresse}}</p>
+          <p class="card-text">{{restaurant.tel}}</p>
+          <p class="card-text">{{restaurant.type?.nom}}</p>
+          <div *ngIf="restaurant.prix?.categorie == 'e'">
+            <i class="fa-solid fa-euro-sign"></i>
+          </div>
+          <div *ngIf="restaurant.prix?.categorie == 'ee'">
+            <i class="fa-solid fa-euro-sign"></i>
+            <i class="fa-solid fa-euro-sign"></i>
+          </div>
+          <div *ngIf="restaurant.prix?.categorie == 'eee'">
+            <i class="fa-solid fa-euro-sign"></i>
+            <i class="fa-solid fa-euro-sign"></i>
+            <i class="fa-solid fa-euro-sign"></i>
+          </div>
+        </div>
+      </div>
+
+      <iframe class="col" [src]="map" width="600" height="450" style="border:0;"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+  </div>
+</div>
