--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+.bg-image {
+    background-image: url("https://images.unsplash.com/photo-1531685250784-7569952593d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHdoaXRlJTIwcmVzdGF1cmFudHxlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+  }
+
+.text {
+  font-family: Tahoma, sans-serif;
+}
+
+.textbold {
+  font-family: Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: large
+}
+
+.textlight {
+  opacity: 0.6;
+  font-style: ;
+}
