onglet fonctionnalité supprimé (car arrondissements sur la page d'accueil) et réglage du style de arrondissements scss

--- a/src/app/pages/restaurant-edit/restaurant-edit.component.html
+++ b/src/app/pages/restaurant-edit/restaurant-edit.component.html
@@ -15,8 +15,8 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="arr" class="form-label text">Arrondissement</label>
-                            <select formControlName="arr" id="arr" class="form-select text"
+                            <label for="arrondissement" class="form-label text">Arrondissement</label>
+                            <select formControlName="arrondissement" id="arrondissement" class="form-select text"
                                 aria-label="Default select example">
                                 <option selected>Sélectionner un arrondissement</option>
                                 <option value="{{arr.id}}" *ngFor="let arr of arrs">{{arr.numero}}</option>
