--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,6 +18,12 @@
           <li class="nav-item">
             <a class="nav-link active textbold" aria-current="page" href="#">Accueil</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active textbold" aria-current="page" routerLink="/types">Types de cuisine</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active textbold" aria-current="page" routerLink="/carte">Carte</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle textbold" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Edition
