--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+/*@import "./node_modules/leaflet/dist/leaflet.css";*/
+@import "~leaflet/dist/leaflet.css";
+
 .bg-image {
     background-image: url("https://images.unsplash.com/photo-1531685250784-7569952593d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHdoaXRlJTIwcmVzdGF1cmFudHxlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60");
     -webkit-background-size: cover;
@@ -22,5 +25,5 @@
 
 .textlight {
   opacity: 0.6;
-  font-style: ;
+  font-style:normal;
 }
