--- a/src/app/pages/arrondissement/arrondissement.component.html
+++ b/src/app/pages/arrondissement/arrondissement.component.html
@@ -33,19 +33,17 @@
   </div>
 </div>
 
-  <ul class="list-group" *ngFor="let restaurant of restaurants">
-    <li class="list-group-item rounded-0">
-      <span>
-        <h5>{{restaurant.nom}}</h5>
-      </span>
-      <span>
-        <i class="fa-solid fa-location-dot"></i><h6>{{restaurant.adresse}}</h6>
-      </span>
-      <span>
-        <i class="fa-solid fa-phone"></i><h6>{{restaurant.tel}}</h6>
-      </span>
-      <span>
-        <i class="fa-solid fa-bowl-food"></i><h6>{{restaurant.type?.nom}}</h6>
+<ul class="list-group" *ngFor="let restaurant of restaurants">
+  <li class="list-group-item rounded-0">
+    <span>
+      <h5>{{restaurant.nom}}</h5>
+    </span>
+    <span>
+      <h6 *ngIf="restaurant.type?.nom === 'Francais'; else elseBlock1">Français</h6>
+      <ng-template #elseBlock1>
+        <h6 *ngIf="restaurant.type?.nom === 'Coreen'; else elseBlock2">Coréen</h6>
+        <ng-template #elseBlock2>{{restaurant.type?.nom}}</ng-template>
+      </ng-template>
       <div *ngIf="restaurant.prix?.categorie == 'e'">
         <i class="fa-solid fa-euro-sign"></i>
       </div>
@@ -58,7 +56,7 @@
         <i class="fa-solid fa-euro-sign"></i>
         <i class="fa-solid fa-euro-sign"></i>
       </div>
-      </span>
-      <a class="btn btn-light text rounded-0" [routerLink]="['/restaurant', restaurant.id]">Détails</a>
-    </li>
-  </ul>
+    </span>
+    <a class="btn btn-light text rounded-0" [routerLink]="['/restaurant', restaurant.id]">Détails</a>
+  </li>
+</ul>
